flatpak: Properly ensure GNOME remotes exist

Builder has gnome and gnome-nightly as builtin repos so it can
automatically install runtimes from them, but it only adds those remotes
in gbp_flatpak_application_addin_install_runtime_worker so they don't
necessarily exist in gbp_flatpak_application_addin_locate_sdk_worker,
which sometimes runs before the runtime worker. This commit makes sure
the remotes exist in both places (because if the GbpFlatpakTransfer is
started from the Preferences perspective the locate_sdk_worker doesn't
run).

https://bugzilla.gnome.org/show_bug.cgi?id=780249